# webdriver-downloader

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  rust.yml
src/: cli.rs  driver_management.rs  lib.rs  main.rs
src/cli/: build_arg.rs  check_arg.rs  run.rs
src/driver_management/: binary_exact_version_hint_url_info.rs  binary_major_version_hint_url_info.rs  chromedriver_info.rs  installation_info.rs  structs.rs  url_info.rs  verification_info.rs
src/driver_management/structs/: chromedriver_info.rs
src/driver_management/traits/: verification_info.rs
webdriver-downloader/: Cargo.toml  README.md
webdriver-downloader-cli/: Cargo.toml  README.md
webdriver-downloader-cli/src/: cli.rs  main.rs
webdriver-downloader-cli/src/cli/: build_arg.rs  check_arg.rs  mod.rs  run.rs
webdriver-downloader-cli/tests/: main.rs
webdriver-downloader/src/: driver_management.rs  lib.rs  webdriver_download_info.rs
webdriver-downloader/src/common/: installation_info.rs  verification_info.rs  version_req_url_info.rs
webdriver-downloader/src/driver_impls/: chromedriver_info.rs  geckodriver_info.rs  mod.rs
webdriver-downloader/src/driver_impls/chromedriver_for_testing_info/: mod.rs  trait_impls.rs
webdriver-downloader/src/driver_impls/chromedriver_info/: mod.rs  trait_impls.rs
webdriver-downloader/src/driver_impls/chromedriver_info/os_specific/: linux.rs  macos.rs  mod.rs  unix_family.rs  windows.rs
webdriver-downloader/src/driver_impls/chromedriver_old_info/: mod.rs  trait_impls.rs
webdriver-downloader/src/driver_impls/geckodriver_info/: mod.rs  trait_impls.rs
webdriver-downloader/src/driver_impls/geckodriver_info/os_specific/: windows.rs
webdriver-downloader/src/driver_management/: mod.rs
webdriver-downloader/src/driver_management/common/: binary_version_hint_url_info.rs  installation_info.rs  mod.rs  url_info.rs  verification_info.rs  version_req_url_info.rs
webdriver-downloader/src/driver_management/driver_impls/chromedriver_info/: mod.rs
webdriver-downloader/src/driver_management/driver_impls/chromedriver_info/os_specific/: linux.rs  macos.rs  unix_family.rs  windows.rs
webdriver-downloader/src/driver_management/driver_impls/geckodriver_info/: mod.rs
webdriver-downloader/src/driver_management/driver_impls/geckodriver_info/os_specific/: linux.rs  macos.rs  windows.rs
webdriver-downloader/src/driver_management/structs/: chromedriver_info.rs
webdriver-downloader/src/driver_management/structs/chromedriver_info/: mod.rs  os_specific_const.rs
webdriver-downloader/src/driver_management/structs/chromedriver_info/os_specific/: linux.rs  macos.rs  unix_family.rs  windows.rs
webdriver-downloader/src/driver_management/structs/chromedriver_info/os_specific_const/: linux.rs  macos.rs  windows.rs
webdriver-downloader/src/driver_management/traits/: binary_major_version_hint_url_info.rs  installation_info.rs  mod.rs  url_info.rs  verification_info.rs
webdriver-downloader/src/os_specific/: mod.rs
webdriver-downloader/src/os_specific/chromedriver/: linux.rs  macos.rs  mod.rs  unix_family.rs  windows.rs
webdriver-downloader/src/os_specific/chromedriver_for_testing/: linux.rs  macos.rs  mod.rs  windows.rs
webdriver-downloader/src/os_specific/chromedriver_old/: linux.rs  macos.rs  windows.rs
webdriver-downloader/src/os_specific/geckodriver/: linux.rs  macos.rs  unix_family.rs  windows.rs
webdriver-downloader/src/traits/: installation_info.rs  mod.rs  url_info.rs  verification_info.rs  version_req_url_info.rs  webdriver_download_info.rs
webdriver-downloader/tests/: main.rs  webdriver_download_info.rs
webdriver-downloader/tests/common/: mod.rs
webdriver-downloader/tests/driver_management/: mod.rs
