[package]
name = "webdriver-downloader"
version = "0.1.0"
edition = "2021"
authors = ["ik1ne <ik1ne@naver.com>"]
repository = "https://github.com/ik1ne/webdriver-downloader"
license = "MIT"
keywords = ["webdriver-downloader", "webdriver", "chromedriver", "geckodriver", ]
categories = ["command-line-utilities", ]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["cargo", "string", ] }
fantoccini = "0.19"
home = "0.5"
lenient_semver = "0.4"
semver = "1"
serde_json = "1"
reqwest = "0.11"
regex = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", ] }
zip = "0.6"
