[package]
name = "webdriver-downloader-cli"
version = "0.5.7"
edition = "2021"
authors = ["ik1ne <ik1ne@naver.com>"]
description = "Cli Interface for webdriver download."
repository = "https://github.com/ik1ne/webdriver-downloader"
homepage = "https://github.com/ik1ne/webdriver-downloader"
license = "MIT"
readme = "README.md"
keywords = ["webdriver-downloader", "webdriver", "chromedriver", "geckodriver", ]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "webdriver-downloader"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "string", ] }
tokio = "1"
webdriver-downloader = { version = "0.13", path = "../webdriver-downloader" }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
