[package]
name = "webdriver-downloader"
version = "0.8.5"
edition = "2021"
authors = ["ik1ne <ik1ne@naver.com>"]
description = "Cli Interface for webdriver download."
repository = "https://github.com/ik1ne/webdriver-downloader"
homepage = "https://github.com/ik1ne/webdriver-downloader"
license = "MIT"
readme = "../README.md"
keywords = ["webdriver-downloader", "webdriver", "chromedriver", "geckodriver", ]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
async-trait = "0.1"
fantoccini = "0.19"
flate2 = "1.0"
lenient_semver = "0.4"
semver = "1"
serde_json = "1"
reqwest = "0.11"
regex = "1"
tar = "0.4"
tempfile = "3"
thiserror = "1"
zip = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["macros", ] }
mockall = "0.11"
